tests/unit-fail/effective_type_2.ref
Error: UB-EIO10
Description: Type of lvalue not compatible with the effective type of the object being accessed.
Type: Undefined behavior.
See also: C11 sec. 6.5:7, J.2:1 item 37
  at f(effective_type_2.c:7)
  at main(effective_type_2.c:15)
Execution failed (configuration dumped)
